Fix long word text wrapping in player title and toast containers, add nicer error message for auto-play policy error, add player durationchange event for livestreams

--- a/web/css/player.css
+++ b/web/css/player.css
@@ -20,20 +20,24 @@
 
 #player_title_container {
     width: auto;
-    max-width: 50%;
+    max-width: 46%;
     height: auto;
     max-height: 70%;
     border-radius: 3px;
     top: 0;
     left: 0;
     position: absolute;
-    display: flex;
     align-items: center;
+    text-align: center;
+    justify-content: center;
     margin-top: 10px;
     margin-left: 10px;
+    white-space: pre-wrap;
+    overflow-wrap: break-word;
     background-color: rgba(40, 40, 40, 0.3);
     opacity: 1;
     transition: visibility 0.3s, opacity 0.3s;
+    padding: 16px;
 }
 
 #player_title_container.player_ui_hide {
@@ -44,27 +48,30 @@
 
 #player_title_text {
     color: white;
-    margin: 16px;
     font-size: 16px;
 }
 
 #player_toast_container {
     width: auto;
-    max-width: 50%;
+    max-width: 46%;
     height: auto;
     max-height: 70%;
     border-radius: 3px;
     top: 0;
     right: 0;
     position: absolute;
-    display: flex;
     visibility: visible;
     align-items: center;
+    justify-content: center;
+    text-align: center;
     margin-top: 10px;
     margin-right: 10px;
     background-color: rgba(40, 40, 40, 0.3);
+    white-space: pre-wrap;
+    overflow-wrap: break-word;
     opacity: 1;
     transition: visibility 0.3s, opacity 0.3s;
+    padding: 16px;
 }
 
 #player_toast_container.player_ui_hide {
@@ -75,7 +82,6 @@
 
 #player_toast_text {
     color: white;
-    margin: 16px;
     font-size: 16px;
 }
 
@@ -148,8 +154,9 @@
     color: white;
     font-size: 30px;
     white-space: pre-wrap;
-    align-items: center;
     justify-content: center;
+    text-align: center;
+    align-items: center;
     text-align: center;
     background-color: #282828AA;
 }
